updated account templates with new overlay structure

--- a/templates/base.html
+++ b/templates/base.html
@@ -175,7 +175,9 @@
             {% elif level == 30 %}
                 {% include 'includes/toasts/toast_warning.html' %}
             {% elif level == 25 %}
-                {% include 'includes/toasts/toast_success.html' %}
+                <script>
+                    createToast('You are logged in!');
+                </script>
             {% else %}
                 {% include 'includes/toasts/toast_info.html' %}
             {% endif %}
