--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,16 @@
                         <ul class="right hide-on-med-and-down">
                             <li><a class="waves-effect modal-trigger" href="#search-bar-modal"><i class="material-icons left">search</i>Search</a></li>
                             <li><a class="waves-effect dropdown-button" data-beloworigin="true" data-stoppropagation="true" data-hover="true" href='#' data-activates="dropdown_account"><i class="material-icons left">local_cafe</i>Account</a></li>
-                            <li><a class="waves-effect"><i class="material-icons left">shopping_cart</i>Cart</a></li>
+                            <li>
+                                <a href="#" class="{% if grand_total %}cyan-text {% endif %}waves-effect">
+                                    <i class="material-icons left">shopping_cart</i>
+                                    {% if grand_total %}
+                                        ${{ grand_total|floatformat:2 }} <span class="new badge cyan">3</span>
+                                    {% else %}
+                                        Cart
+                                    {% endif %}
+                                </a>
+                            </li>
                         </ul>
                         <!-- Mobile Content Pages Navbar Navbar -->
                         <a href="#" data-activates="content-nav-mobile" class="button-collapse"><i id="mobile-button-collapse" class="material-icons">menu</i></a>
