added content to index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,31 +9,31 @@
     <div class="slider">
         <ul class="slides">
             <li>
-                <img src="{{ MEDIA_URL }}background8.jpg"> <!-- random image -->
+                <img alt="Guatemala Background Image" src="{{ MEDIA_URL }}background8.jpg"> <!-- Semuc Champei image -->
                 <div class="caption center-align">
-                    <h3>This is our big Tagline!</h3>
-                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    <h3>One Of The World's Best</h3>
+                    <h5 class="light grey-text text-lighten-3">High quality coffees.</h5>
                 </div>
             </li>
             <li>
-                <img src="{{ MEDIA_URL }}background5.jpg"> <!-- random image -->
+                <img alt="Guatemala Background Image" src="{{ MEDIA_URL }}background5.jpg"> <!-- Atitlan image -->
                 <div class="caption left-align">
-                    <h3>Left Aligned Caption</h3>
-                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    <h3>A Blessed Country</h3>
+                    <h5 class="light grey-text text-lighten-3">With unique growing conditions.</h5>
                 </div>
             </li>
             <li>
-                <img src="{{ MEDIA_URL }}background9.jpg"> <!-- random image -->
+                <img alt="Guatemala Background Image" src="{{ MEDIA_URL }}background9.jpg"> <!-- Tikal image -->
                 <div class="caption right-align">
-                    <h3>Right Aligned Caption</h3>
-                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    <h3>7 Coffee Regions</h3>
+                    <h5 class="light grey-text text-lighten-3">With distinct cup profiles.</h5>
                 </div>
             </li>
             <li>
-                <img src="{{ MEDIA_URL }}background10.jpg"> <!-- random image -->
+                <img alt="Guatemala Background Image" src="{{ MEDIA_URL }}background10.jpg"> <!-- Volcano landscape image -->
                 <div class="caption center-align">
-                    <h3>This is our big Tagline!</h3>
-                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    <h3>Enjoy your Coffee!</h3>
+                    <h5 class="light grey-text text-lighten-3">Begin your own experience.</h5>
                 </div>
             </li>
         </ul>
@@ -45,35 +45,31 @@
             <div class="row">
                 <div class="col s12 m4">
                     <div class="icon-block">
-                        <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-                        <h5 class="center">Speeds up development</h5>
+                        <h2 class="center brown-text"><i class="material-icons">free_breakfast</i></h2>
+                        <h5 class="center">Guatemalan Coffee</h5>
 
-                        <p class="light">We did most of the heavy lifting for you to provide a default stylings
-                            that incorporate our custom components. Additionally, we refined animations and
-                            transitions to provide a smoother experience for developers.</p>
+                        <p class="light">Guatemala in particular is a favorite among coffee fanatics, and for good reason too. Coffee from Guatemala can be the perfect balance of full bodied, strong and sweet with a gentle acidity and complex flavor notes.</p>
+                        <p class="light">It can appeal to a wide range of people and there is sure to be a coffee from this country with your name on it.</p>
+
                     </div>
                 </div>
 
                 <div class="col s12 m4">
                     <div class="icon-block">
-                        <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-                        <h5 class="center">User Experience Focused</h5>
+                        <h2 class="center brown-text"><i class="material-icons">wb_sunny</i></h2>
+                        <h5 class="center">Choose From 7 Regions</h5>
 
-                        <p class="light">By utilizing elements and principles of Material Design, we were able
-                            to create a framework that incorporates components and animations that provide more
-                            feedback to users. Additionally, a single underlying responsive system across all
-                            platforms allow for a more unified user experience.</p>
+                        <p class="light">The climate in Guatemala is one of the most diverse in the world for coffee production.</p>
+                        <p class="light">There are 7 main growing regions within Guatemala, with Antigua, Huehuetenango and Atitlan being the most popular. Each region has its own set of unique growing conditions and microclimates.</p>
                     </div>
                 </div>
 
                 <div class="col s12 m4">
                     <div class="icon-block">
-                        <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                        <h5 class="center">Easy to work with</h5>
+                        <h2 class="center brown-text"><i class="material-icons">storefront</i></h2>
+                        <h5 class="center">Start Your Experience!</h5>
 
-                        <p class="light">We have provided detailed documentation as well as specific code
-                            examples to help new users get started. We are also always open to feedback and can
-                            answer any questions a user may have about Materialize.</p>
+                        <p class="light">Search through our online store for that coffe option with your name on it. Let us contribute to improve the quality of life for many communities and families by choosing our store. We are commited to create economic opportunities for small farmers in Guatemala, as well as to meet your coffee taste expectations.</p>
                     </div>
                 </div>
             </div>
@@ -83,18 +79,18 @@
 		<div class="section no-pad-bot">
 			<div class="container">
 				<br><br>
-				<h1 class="header center teal-text text-lighten-2">Title 1</h1>
+				<h1 class="header center cyan-text text-darken-2">Enjoyed Your Coffee?</h1>
 				<div class="row center">
-					<h5 class="header col s12 light">A modern responsive front-end framework based on Material Design
-					</h5>
+					<h5 class="header col s12 light">Do you have a favorite coffee from our store?</h5>
+                    <h5>Let us know leaving a review of our products!</h5>
 				</div>
 				<div class="row center">
-					<a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+					<a href="#" id="download-button" class="btn-large waves-effect waves-light cyan darken-2">Get Started</a>
 				</div>
 				<br><br>
             </div>
 		</div>
-		<div class="parallax"><img src="{{ MEDIA_URL }}background6.jpg" alt="Unsplashed background img 1"></div>
+		<div class="parallax"><img src="{{ MEDIA_URL }}background4.jpg" alt="Coffee Products Background Image"></div>
 	</div>
 
     <div class="parallax-container valign-wrapper">
