added urls in buttons for products and home for base.html and index.html, corrected styles in dropdown items

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -38,7 +38,7 @@
             </li>
         </ul>
     </div>
-    <a class="btn-floating btn waves-effect waves-light deep-purple darken-3">Buy Now</a>
+    <a href="{% url 'products' %}" class="btn-floating btn waves-effect waves-light deep-purple darken-3">Buy Now</a>
     <div class="container">
 		<div class="section">
 			<!--   Icon Section   -->
@@ -85,7 +85,7 @@
                     <h5>Let us know leaving a review of our products!</h5>
 				</div>
 				<div class="row center">
-					<a href="#" id="download-button" class="btn-large waves-effect waves-light cyan darken-2">Get Started</a>
+					<a href="{% url 'products' %}" id="download-button" class="btn-large waves-effect waves-light cyan darken-2">Get Started</a>
 				</div>
 				<br><br>
             </div>
