--- a/templates/includes/mobile_top_header.html
+++ b/templates/includes/mobile_top_header.html
@@ -1,7 +1,7 @@
 <!-- Mobile Top Header Bar -->
 <div id="mobile-top-header" data-target="red" class="mobile-top-header hide-on-large-only">
     <a class="waves-effect waves-light modal-trigger" href="#search-bar-modal"><i class="material-icons">search</i>Search</a>
-    <a id="mobile-account-dropdown-button" data-beloworigin="true" data-stoppropagation="true" class='waves-effect waves-light dropdown-button' href='#' data-activates='mobile-dropdown-account'><i class="material-icons">local_cafe</i>Account</a>
+    <a id="mobile-account-dropdown-button" data-beloworigin="true" data-stoppropagation="true" class='waves-effect waves-light dropdown-button' data-activates='mobile-dropdown-account'><i class="material-icons">local_cafe</i>Account</a>
     <a href="#" class="{% if grand_total %}cyan-text {% endif %}waves-effect">
         <i class="material-icons left">shopping_cart</i>
         {% if grand_total %}
@@ -15,7 +15,7 @@
 <ul id='mobile-dropdown-account' class='dropdown-content'>
 	{% if request.user.is_authenticated %}
         {% if request.user.is_superuser %}
-            <li><a href="#" class="dropdown-item">Product Management</a></li>
+            <li><a href="{% url 'products' %}" class="dropdown-item">Product Management</a></li>
             <li class="divider" tabindex="-1"></li>
         {% endif %}
         <li><a href="#" class="dropdown-item">My Profile</a></li>
