--- a/templates/base.html
+++ b/templates/base.html
@@ -74,11 +74,11 @@
                         <a href="#" data-activates="content-nav-mobile" class="button-collapse"><i id="mobile-button-collapse" class="material-icons">menu</i></a>
                         <ul id="content-nav-mobile" class="side-nav">
                             <li class="center-align">Content</li>
-                            <li><a class="waves-effect waves-light orange accent-2 black-text btn">Home</a></li>
-                            <li><a class="waves-effect waves-light black-text btn">Products</a></li>
-                            <li><a class="waves-effect waves-light deep-purple darken-3 btn">Coffee Club</a></li>
-                            <li><a class="waves-effect waves-light orange accent-2 black-text btn">About</a></li>
-                            <li><a class="waves-effect waves-light red btn">Contact</a></li>
+                            <li><a href="{% url 'home' %}" class="waves-effect waves-light orange accent-2 black-text btn">Home</a></li>
+                            <li><a href="{% url 'products' %}" class="waves-effect waves-light black-text btn">Products</a></li>
+                            <li><a href="#" class="waves-effect waves-light deep-purple darken-3 btn">Coffee Club</a></li>
+                            <li><a href="#" class="waves-effect waves-light orange accent-2 black-text btn">About</a></li>
+                            <li><a href="#" class="waves-effect waves-light red btn">Contact</a></li>
                         </ul>
                     </div>
                     <div id="logo-image" class="logo-image-container">
@@ -88,7 +88,7 @@
                     <ul id='dropdown_account' class='dropdown-content'>
                         {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
-                                <li><a href="#" class="dropdown-item">Product Management</a></li>
+                                <li><a href="{% url 'products' %}" class="dropdown-item">Product Management</a></li>
                                 <li class="divider" tabindex="-1"></li>
                             {% endif %}
                             <li><a href="#" class="dropdown-item">My Profile</a></li>
@@ -107,11 +107,11 @@
             <!-- Desktop Content Pages Navbar -->
             <div id="content-navbar" class="nav-extended center-align">
                 <div class="nav-content hide-on-med-and-down">
-                    <a class="waves-effect waves-light orange accent-2 black-text btn">Home</a>
-                    <a class="waves-effect waves-light black-text btn">Products</a>
-                    <a class="waves-effect waves-light deep-purple darken-3 btn">Coffee Club</a>
-                    <a class="waves-effect waves-light orange accent-2 black-text btn">About</a>
-                    <a class="waves-effect waves-light red btn">Contact</a>
+                    <a href="{% url 'home' %}"class="waves-effect waves-light orange accent-2 black-text btn">Home</a>
+                    <a href="{% url 'products' %}" class="waves-effect waves-light black-text btn">Products</a>
+                    <a href="#" class="waves-effect waves-light deep-purple darken-3 btn">Coffee Club</a>
+                    <a href="#" class="waves-effect waves-light orange accent-2 black-text btn">About</a>
+                    <a href="#" class="waves-effect waves-light red btn">Contact</a>
                 </div>
                 {% include 'includes/mobile_top_header.html' %}
             </div>
