--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -11,11 +11,41 @@
 			<!--   Icon Section   -->
             <div class="row">
                 <div class="col s12">
-                    {{ products }}
+                    <div class="row">
+                        {% for product in products %}
+                        <div class="col s12 m6 l3">
+                            <div class="card">
+                                <div class="card-image">
+                                    {% if product.main_image %}
+                                    <a href="">
+                                        <img class="materialboxed" src="{{ product.main_image.url }}" alt="{{ product.name }}">
+                                    </a>
+                                    {% else %}
+                                    <a href="">
+                                        <img class="materialboxed src="{{ MEDIA_URL }}no_image_available.png" alt="{{ product.name }}">
+                                    </a>
+                                    {% endif %}
+                                    
+                                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                                </div>
+                                <div class="card-content">
+                                    <span class="card-title">{{ product.name }}</span>
+                                    <p class="lead mb-0 text-left font-weight-bold">${{ product.retail_price }}</p>
+                                    {% if product.rating %}
+                                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                                    {% else %}
+                                    <small class="text-muted">No Rating</small>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
-		</div>
+        </div>
 	</div>
+
     <div class="parallax-container valign-wrapper">
         <div class="section no-pad-bot">
             <div class="container">
