--- a/static/css/base.css
+++ b/static/css/base.css
@@ -172,6 +172,45 @@ header nav ul a {
     margin: 0;
 }
 
+/* All Products Page */
+
+.product-card-container {
+    /* width: 450px; */
+}
+
+.product-card-container .card-image, .card-content {
+    height: 250px;
+    padding-top: 5px;
+}
+
+.product-card-container .card-image .material-placeholder {
+    height: 100%;
+}
+
+.product-card-container .card-image img {
+    max-height: 245px;
+    width: 90%;
+    margin: auto auto 0px auto
+}
+
+.product-card-container .card-content {
+    height: 250px;
+}
+
+.card-content .card-title {
+    height: 50%;
+}
+
+.card-content .badge {
+    float: left;
+    margin-right: 14px;
+    margin-left: 0px;
+}
+
+#card-price-text {
+    color: #00a890
+}
+
 /* ---------- Footer ------------ */
 
 footer.page-footer {
