--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -23,7 +23,7 @@
                 <div class="col s12 m8">
                     <div class="row">
                         {% for product in products %}
-                        <div class="col s12 m6 l3 product-card-container">
+                        <div class="col s12 m6 product-card-container">
                             <div class="card">
                                 <div class="card-image">
                                     {% if product.main_image %}
@@ -36,7 +36,7 @@
                                     </a>
                                     {% endif %}
                                     
-                                    <a class="btn-floating halfway-fab waves-effect waves-light"><i class="material-icons">add</i></a>
+                                    <a class="btn-floating halfway-fab waves-effect waves-light"><i class="material-icons">free_breakfast</i></a>
                                 </div>
                                 <div class="card-content">
                                     {% if product.new_product%}
@@ -47,11 +47,6 @@
                                     <p id="card-price-text">${{ product.retail_price }}</p>
                                     <div class="rating-stars-container">
                                         {% if product.rating %}
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
                                         <small class="text-muted">{{ product.rating }} / 5</small>
                                         {% else %}
                                         <small class="text-muted">No Rating</small>
