added more content to home page, quotes, styles, about section

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -75,7 +75,87 @@
             </div>
 		</div>
 	</div>
-    <div id="index-banner" class="parallax-container">
+    
+
+    <div class="parallax-container valign-wrapper about-parallax-container">
+        <div class="section">
+            <div class="about-wrapper">
+                <div class="row center">
+                    <div class="container">
+                        <h3 class="brown-text"><i class=""></i>About Us</h3>
+                        <h5 class="header col s12 brown-text">A modern responsive front-end framework based on Material Design</h5>
+                        <p class="col s12 left-align black-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non
+                            consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo,
+                            ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium
+                            eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis
+                            nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed
+                            ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat.
+                            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+                            Curae;
+                        </p>
+                    </div>
+                </div>                
+            </div>
+        </div>
+        <div class="parallax"><img src="{{ MEDIA_URL }}background5.jpg" alt="Unsplashed background img 2"></div>
+    </div>
+    <div class="container">
+        <div class="section">
+            <div class="row about-wrapper">
+                <div class="col s12 center">
+                    <h4 class="brown-text">Tell Us What You Think!</h4>
+                    <div class="row">
+                        <div class="col s12 m6">
+                            <ul class="collection quote-collection">
+                                <li class="collection-item avatar">
+                                    <img src="{{ MEDIA_URL }}alex.jpg" alt="Guy smiling image" class="circle quote-img">
+                                    <blockquote>
+                                        <h5 class="">The Perfect Flavor Balance!</h5>
+                                        <span class="material-icons">format_quote</span>
+                                        I never thought coffee could have a perfect balance of sweet notes and acidity with a full body. <br> I can't have another coffee!
+                                        <span class="material-icons">format_quote</span>
+                                        <br><br>- Josh Stevens, CA
+                                    </blockquote>
+                                    <span href="#!" class="secondary-content">
+                                        <i class="material-icons">grade</i>
+                                        <i class="material-icons">grade</i>
+                                        <i class="material-icons">grade</i>
+                                        <i class="material-icons">grade</i>
+                                        <i class="material-icons">grade</i>
+                                     5/5
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col s12 m6">
+                            <ul class="collection quote-collection">
+                                <li class="collection-item avatar">
+                                    <img src="{{ MEDIA_URL }}michelle.jpg" alt="Girl smiling image" class="circle quote-img">
+                                    <blockquote>
+                                        <h5 class="">My Stomach Is Happy Now</h5>
+                                        <span class="material-icons">format_quote</span>
+                                        Because of some stomach issues I could not tolerate coffee before. <br>But now I do since I drink Guatemalan coffees!
+                                        <span class="material-icons">format_quote</span>
+                                        <br><br>- Erica McCartney, NY
+                                    </blockquote>
+                                    <span href="#!" class="secondary-content">
+                                        <i class="material-icons">grade</i>
+                                        <i class="material-icons">grade</i>
+                                        <i class="material-icons">grade</i>
+                                        <i class="material-icons">grade</i>
+                                        <i class="material-icons">grade</i>
+                                     5/5
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="index-banner" class="parallax-container question-parallax">
 		<div class="section no-pad-bot">
 			<div class="container">
 				<br><br>
@@ -90,51 +170,8 @@
 				<br><br>
             </div>
 		</div>
-		<div class="parallax"><img src="{{ MEDIA_URL }}background4.jpg" alt="Coffee Products Background Image"></div>
+		<div class="parallax"><img src="{{ MEDIA_URL }}background6.jpg" alt="Coffee Beans Background Image"></div>
 	</div>
-
-    <div class="parallax-container valign-wrapper">
-        <div class="section no-pad-bot">
-            <div class="container">
-                <div class="row center">
-                    <h5 class="header col s12 light">A modern responsive front-end framework based on Material
-                        Design</h5>
-                </div>
-            </div>
-        </div>
-        <div class="parallax"><img src="{{ MEDIA_URL }}background5.jpg" alt="Unsplashed background img 2"></div>
-    </div>
-    <div class="container">
-        <div class="section">
-            <div class="row">
-                <div class="col s12 center">
-                    <h3><i class="mdi-content-send brown-text"></i></h3>
-                    <h4>Contact Us</h4>
-                    <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non
-                        consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo,
-                        ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium
-                        eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis
-                        nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed
-                        ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat.
-                        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-                        Curae;</p>
-                </div>
-            </div>
-
-        </div>
-    </div>
-    <div class="parallax-container valign-wrapper">
-        <div class="section no-pad-bot">
-            <div class="container">
-                <div class="row center">
-                    <h5 class="header col s12 light">A modern responsive front-end framework based on
-                        Material Design</h5>
-                </div>
-            </div>
-        </div>
-        <div class="parallax"><img src="{{ MEDIA_URL }}background4.jpg" alt="Unsplashed background img 3"></div>
-    </div>
 {% endblock %}
 
 {% block postloadjs %}
