completed styles in home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -30,7 +30,7 @@
                 </div>
             </li>
             <li>
-                <img alt="Guatemala Background Image" src="{{ MEDIA_URL }}background10.jpg"> <!-- Volcano landscape image -->
+                <img alt="Guatemala Background Image" src="{{ MEDIA_URL }}background7.jpg"> <!-- Volcano landscape image -->
                 <div class="caption center-align">
                     <h3>Enjoy your Coffee!</h3>
                     <h5 class="light grey-text text-lighten-3">Begin your own experience.</h5>
@@ -98,7 +98,7 @@
                 </div>                
             </div>
         </div>
-        <div class="parallax"><img src="{{ MEDIA_URL }}background5.jpg" alt="Unsplashed background img 2"></div>
+        <div class="parallax"><img src="{{ MEDIA_URL }}background12.jpg" alt="Guatemala Antigua Town Background Image"></div>
     </div>
     <div class="container">
         <div class="section">
@@ -159,7 +159,7 @@
 		<div class="section no-pad-bot">
 			<div class="container">
 				<br><br>
-				<h1 class="header center cyan-text text-darken-2">Enjoyed Your Coffee?</h1>
+				<h1 class="header center cyan-text text-darken-2">Enjoyed Our Coffee?</h1>
 				<div class="row center">
 					<h5 class="header col s12 light">Do you have a favorite coffee from our store?</h5>
                     <h5>Let us know leaving a review of our products!</h5>
